--- a/detect/templates/detect/index.html
+++ b/detect/templates/detect/index.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="{% static 'css/detect.css' %}">
     </head>
     <body>
+        <div class="all">
         <div>
-            <h1><a href="/">あの子に似てる<span style="color:#e966fe";>AV</span>女優</a></h1>
+            <h1><a href="/">あの子に似てる<span style="color:#ff4da6";>AV</span>女優</a></h1>
         </div>
 
     
@@ -21,5 +22,10 @@
             <input class="button" type="submit" name="submit" value="女優を検索">
             </div>
         </form>
+        <div class="text">
+        <p>似ているAV女優をAIが自動で探します。</p>
+        <p>知り合いのあの子や好きな芸能人の画像など、アップロードして検索ボタンを押してみてください。</p>
+        </div>
+        </div>
     </body>
 </html>
