--- a/detect/templates/detect/result.html
+++ b/detect/templates/detect/result.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <h1><a href="/">あの子に似てる<span style="color:#e966fe";>AV</span>女優</a></h1>
+            <h1><a href="/">あの子に似てる<span style="color:#ff4da6";>AV</span>女優</a></h1>
         </div>
         <span class="name">{{ name }}</span>
         <br>
