--- a/detect/templates/detect/index.html
+++ b/detect/templates/detect/index.html
@@ -1,6 +1,15 @@
 {% load static %}
 <html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135627645-5"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-135627645-5');
+        </script>
         <title>あの子に似てるAV女優</title>
         <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/detect.css' %}">
